--- a/git.html
+++ b/git.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>KYOSHE</title>
-    <link rel="stylesheet" href="">
+    <link rel="script" type="async" href="alert(1).js">
     <link >
 </head>
 
