--- a/git.html
+++ b/git.html
@@ -3,7 +3,8 @@
 
 <head>
     <title>KYOSHE</title>
-    <link rel="script" type="async" href="alert(1).js">
+    <script async src="alert(2).js"></script>
+    <script defer src="alert(3).js"></script>
     <link >
 </head>
 
