--- a/git.html
+++ b/git.html
@@ -3,9 +3,8 @@
 
 <head>
     <title>KYOSHE</title>
-    <script async src="alert(2).js"></script>
-    <script defer src="alert(3).js"></script>
-    <link >
+    <script src="alert(2).js"> defer </script>
+   
 </head>
 
 <body class="main-body">
@@ -17,4 +16,5 @@
     alert(1)
 </script>
 
+<script src="alert(3).js"> async</script>
 </html>
