added css files and divs to html file

--- a/git.html
+++ b/git.html
@@ -8,8 +8,14 @@
 </head>
 
 <body class="main-body">
+    <div class="el1">
+        <span>IT IS EL1</span>>
+    </div>
 
-
+    
+    <div class="el2">
+        <span>IT IS EL1</span>>
+    </div>
 </body>
 
 <script>
