added styles in css files

--- a/git.html
+++ b/git.html
@@ -4,17 +4,18 @@
 <head>
     <title>KYOSHE</title>
     <script src="alert(2).js"> defer </script>
-   
+    <link rel="stylesheet" href="first.css">
+    <link rel="stylesheet" href="second.css">
 </head>
 
 <body class="main-body">
     <div class="el1">
-        <span>IT IS EL1</span>>
+        <span>IT IS EL1</span>
     </div>
 
     
     <div class="el2">
-        <span>IT IS EL1</span>>
+        <span>IT IS EL1</span>
     </div>
 </body>
 
